# book_catalog_rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: rust.yml
http/: auth.http  http-client.env.json  user.http
migrations/2024-05-21_create_users/: up.sql
src/: error_handlers.rs  main.rs  models.rs  routes.rs  service.rs  state.rs
src/auth/: auth_utils.rs  controller.rs  mod.rs  model.rs  service.rs
src/db/: init.rs  migrate.rs  mod.rs  users.rs
src/db/migrations/: 20240521010101_create_schema.sql  20240521020202_create_users.sql
src/err/: errors.rs
src/http/: error_handlers.rs  mod.rs  model.rs
src/user/: controller.rs  mod.rs  model.rs  repo.rs  service.rs
src/utils/: id_generator.rs
