[package]
name = "book-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dotenv = "*"
rs-snowflake = "*"
lazy_static = "*"
log = "*"
env_logger = "*"
validator = "*"
validator_derive = "*"
chrono = "*"
argon2 = "*"
rand = "*"
sqlx = { version = "*", features = ["runtime-actix-native-tls", "postgres"] }
