[package]
name = "book-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
http = "1.1.0"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dotenv = "0.15.0"
rs-snowflake = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.21"
env_logger = "0.11.3"
validator = "0.18.1"
validator_derive = "0.18.1"
chrono = "0.4.38"
argon2 = "0.5.3"
rand = "0.8.5"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std-native-tls"] }
thiserror = "1.0.61"
hyper = "1.3.1"
